tests/netedit/basic/configs/netecfg/load/invalid/meandatas/log.netedit
Error: Cannot read file 'dummy.med.add.xml'!
Error: Loading of dummy.med.add.xml failed.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
Warning: Lane 'E4_0' is not connected from any incoming edge at junction 'J4'.
Warning: Lane 'E8_0' is not connected from any incoming edge at junction 'J7'.
